--- a/bookmark/templates/bookmark/bookmark_list.html
+++ b/bookmark/templates/bookmark/bookmark_list.html
@@ -39,7 +39,7 @@
             <tr>
                 <td>{{ forloop.counter}}</td>
                 <td>{{ book.name }}</td>
-                <td><a href="{{ book.url }}">{{ book.url }}</a> </td>
+                <td><a href="{{ book.url }}" target="_blank">{{ book.url }}</a> </td>
                 <td><a href="#" style="color:blueviolet">수정</a> </td>
                 <td><a href="#" style="color:red">삭제</a></td>
             </tr>
