templates bookmark_detail, bookmark_list

--- a/bookmark/templates/bookmark/bookmark_list.html
+++ b/bookmark/templates/bookmark/bookmark_list.html
@@ -38,7 +38,7 @@
         {% for book in bookmark_list %}
             <tr>
                 <td>{{ forloop.counter}}</td>
-                <td>{{ book.name }}</td>
+                <td><a href="{% url 'bookmark:detail' pk=book.pk %}">{{ book.name }}</a></td>
                 <td><a href="{{ book.url }}" target="_blank">{{ book.url }}</a> </td>
                 <td><a href="#" style="color:blueviolet">수정</a> </td>
                 <td><a href="#" style="color:red">삭제</a></td>
