--- a/bookmark/templates/bookmark/bookmark_detail.html
+++ b/bookmark/templates/bookmark/bookmark_detail.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>{{ bookmark.name }}</h1>
-<a href="{{ bookmark.url }}">{{ bookmark.url }}</a>
-
+<a href="{{ bookmark.url }}">{{ bookmark.url }}</a> <br>
+<a href="{% url 'bookmark:list' %}">Go to Bookmark List</a>
 </body>
 </html>
