--- a/bookmark/templates/bookmark/bookmark_update.html
+++ b/bookmark/templates/bookmark/bookmark_update.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Edit Bookmark</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}Edit Bookmark{% endblock %}
+{% block content %}
 <form action="" method="post">
     {% csrf_token %}
     {{ form.as_ul }}
     <input type="submit" value="edit">
 </form>
-</body>
-</html>
+{% endblock %}
