--- a/bookmark/templates/bookmark/bookmark_create.html
+++ b/bookmark/templates/bookmark/bookmark_create.html
@@ -1,14 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Bookmark List</title>
-    </head>
-<body>
+{% extends 'base.html' %}
+{% block title %}Add Bookmark {% endblock %}
+{% block content %}
 <form action="{% url 'bookmark:add' %}" method="post">
     {% csrf_token %}
     {{ form.as_ul }}
     <button type="submit">ADD</button>
 </form>
-</body>
-</html>
+{% endblock %}
