Bootstrap, STATIC_ROOT, STATICFILES_DIRS

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,15 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
 </head>
 <body>
 {# block 블록이름  : 블록이름으로 해당 블록안에 작성할 수 있다. #}
     {% block content %}
-
     {% endblock %}
 </body>
 </html>
