--- a/bookmark/templates/bookmark/bookmark_create.html
+++ b/bookmark/templates/bookmark/bookmark_create.html
@@ -4,6 +4,6 @@
 <form action="{% url 'bookmark:add' %}" method="post">
     {% csrf_token %}
     {{ form.as_ul }}
-    <button type="submit">ADD</button>
+    <button type="submit" class="badge-success">ADD</button>
 </form>
 {% endblock %}
