--- a/bookmark/templates/bookmark/bookmark_list.html
+++ b/bookmark/templates/bookmark/bookmark_list.html
@@ -2,9 +2,13 @@
 {% block title %} Bookmark List {% endblock %}
 {% block content %}
 {# 주소 앞에 /가 붙으면 절대주소, /안붙으면 상대주소(현재 url 뒤에 붙는다)#}
-<a href="{% url 'bookmark:add' %}">Add Bookmark</a>
+    <br>
+<div class="btn-group">
+    <a href="{% url 'bookmark:add' %}" class="btn btn-warning">ADD Bookmark</a>
+</div>
 <br>
-<table >
+
+<table class="table" >
     <thead>
         <tr>
             <th>#</th>
@@ -21,8 +25,8 @@
                 {#  pk == id 글자만 다른거임(id가 최신)        #}
                 <td><a href="{% url 'bookmark:detail' pk=book.pk %}">{{ book.name }}</a></td>
                 <td><a href="{{ book.url }}" target="_blank">{{ book.url }}</a> </td>
-                <td><a href="{% url 'bookmark:edit' pk=book.id %}" style="color:blueviolet">수정</a> </td>
-                <td><a href="{% url 'bookmark:delete' pk=book.id %}" style="color:red">삭제</a></td>
+                <td><a href="{% url 'bookmark:edit' pk=book.id %}" class="btn btn-primary">수정</a> </td>
+                <td><a href="{% url 'bookmark:delete' pk=book.id %}" class="btn btn-danger">삭제</a></td>
             </tr>
         {% endfor %}
     </tbody>
