--- a/bookmark/templates/bookmark/bookmark_detail.html
+++ b/bookmark/templates/bookmark/bookmark_detail.html
@@ -3,5 +3,5 @@
 {% block content %}
 <h1>{{ bookmark.name }}</h1>
 <a href="{{ bookmark.url }}">{{ bookmark.url }}</a> <br>
-<a href="{% url 'bookmark:list' %}">Go to Bookmark List</a>
+<a href="{% url 'bookmark:list' %}" class="btn btn-warning">Go to Bookmark List</a>
 {% endblock %}
