--- a/bookmark/templates/bookmark/bookmark_update.html
+++ b/bookmark/templates/bookmark/bookmark_update.html
@@ -4,6 +4,6 @@
 <form action="" method="post">
     {% csrf_token %}
     {{ form.as_ul }}
-    <input type="submit" value="edit">
+    <input type="submit" class="btn-success" value="edit">
 </form>
 {% endblock %}
