accounts/forms LoginForm

--- a/accounts/templates/accounts/register_done.html
+++ b/accounts/templates/accounts/register_done.html
@@ -4,6 +4,6 @@
 {% block content %}
     {{ profile }}님, 환영합니다.
 {#    <a href="{% url 'accounts:login' %}">로그인</a>#}
-    <a href="">로그인</a>
+    <a href="{% url '' %}">로그인</a>
 
 {% endblock %}
