--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -4,7 +4,7 @@
 {% block content %}
     <form action="" method="post">
         {% csrf_token %}
-        {% form.as_p %}
+        {{ form.as_p }}
         <input type="submit" value="register" class="btn btn-primary">
     </form>
 
