--- a/bookmark/templates/bookmark/bookmark_list.html
+++ b/bookmark/templates/bookmark/bookmark_list.html
@@ -5,7 +5,7 @@
     <br>
 <div class="btn-group">
     <a href="{% url 'bookmark:add' %}" class="btn btn-warning">ADD Bookmark</a>
-    <a href="{% url 'accounts:register' %}" class="btn btn-warning">register</a>
+    <a href="{% url 'accounts:register' %}" class="btn btn-success">register</a>
 </div>
 <br>
 
