--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -5,7 +5,7 @@
     <form action="" method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="register" class="btn btn-primary">
+        <input type="submit" value="register" class="btn btn-info">
     </form>
 
 {% endblock %}
