--- a/bookmark/templates/bookmark/bookmark_list.html
+++ b/bookmark/templates/bookmark/bookmark_list.html
@@ -4,8 +4,13 @@
 {# 주소 앞에 /가 붙으면 절대주소, /안붙으면 상대주소(현재 url 뒤에 붙는다)#}
     <br>
 <div class="btn-group">
-    <a href="{% url 'bookmark:add' %}" class="btn btn-warning">ADD Bookmark</a>
-    <a href="{% url 'accounts:register' %}" class="btn btn-success">register</a>
+    {% if user.is_authenticated %}
+        <a href="{% url 'bookmark:add' %}" class="btn btn-warning">ADD Bookmark</a>
+        <a href="{% url 'accounts:logout' %}" class="btn btn-light">logout</a>
+    {% else %}
+        <a href="{% url 'accounts:register' %}" class="btn btn-success">register</a>
+        <a href="{% url 'accounts:login' %}" class="btn btn-info">login</a>
+    {% endif %}
 </div>
 <br>
 
